spring-boot/istio-example/gateway-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: product-catalog-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-catalog
spec:
  hosts:
  - "*"
  gateways:
  - product-catalog-gateway
  http:
  - match:
    - uri:
        prefix: /product
    route:
    - destination:
        host: product-catalog
        port:
          number: 8080
